# ProyectosFacultad

BasesDeDatos/BD/: BaseDeDatos.php  Inserting.php  Login.php  Singup.php  imageDog_api.php  nameDog_api.php  perros.txt
C#/Cuentas_bancarias/: CuentasBancarias.cs
Complejidad/Practica01/: README.txt  lector.py
Cursos/JavaScript/: app.js  (+1 more)
Distribuida/: Pruebas.py  simpy_prueba.py
Haskell/: ExtraPractica05.hs  Practica03.hs  Practica04.hs  Practica06.hs  Practica07.hs  Practica08.hs  Practica09.hs  Read Me 9.txt  prueba6.hs
ICC/: Matriz.tar
InterfacesDeUsuario/: README.md
Java/: Cuadrado.java  interview.java
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/: .buildconfig  meson.build
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/Reporte/: Bibliografia.fdb_latexmk  Bibliografia.fls  Bibliografia.tex
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/Reporte/elReporte/: ProyectoBuscaminas.aux  ProyectoBuscaminas.tex  tags.0ouDrp
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/src/Celdas/: Celdas.vala
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/src/Juego de Partidas/: JuegodePartida.vala
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/src/Menu/: InicioJuego.vala
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/src/Tablero/: Tablero.vala
Modelado/Modelado/tareas/Buscaminas/Buscaminas-V2.0/Buscaminas-V2/test/: test-buscaminas-main.vala  test-buscaminas.vala  test_case.vala
Videojuegos/: DanteSinencioTarea03.unitypackage
(+646 files in other folders)
